docs(call-api): update tutorial

--- a/call-api.ipynb
+++ b/call-api.ipynb
@@ -43,6 +43,8 @@
     "- 百度 API，详见 https://console.bce.baidu.com/qianfan/ais/console/applicationConsole/application\n",
     "- 阿里通义千问 API，详见 https://dashscope.console.aliyun.com/apiKey\n",
     "\n",
+    "你可以在上述网址中注册账号并申请 API Key，大部分模型对于新用户都有一定的免费额度，少部分可能需要预付费。\n",
+    "\n",
     "为了避免将 API Key 暴露在公开的代码中，我们将 API Key 保存在 `.env` 文件中，然后通过 `dotenv` 包的 `load_dotenv()` 方法读取到环境变量中。\n",
     "\n",
     "在当前目录下新建一个 `.env` 文件，层级结构如下：\n",
@@ -130,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"你是谁\""
+    "prompt = \"你是谁？\""
    ]
   },
   {
@@ -159,7 +161,7 @@
    "source": [
     "openai.ChatCompletion.create(\n",
     "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{\"role\": \"user\", \"content\": \"你是谁\"}],\n",
+    "            messages=[{\"role\": \"user\", \"content\": prompt}],\n",
     "        ).choices[0].message.content"
    ]
   },
