docs(all-api): update to English version

--- a/call-api.ipynb
+++ b/call-api.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 导入必要的包"
+    "## Import necessary packages"
    ]
   },
   {
@@ -28,26 +28,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 配置模型 API Key"
+    "## Configuring Model API Keys"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "我们一共使用 5 个在线大模型 API，分别是：\n",
+    "We use a total of 5 large model APIs, which are:\n",
     "\n",
-    "- OpenAI API，详见 https://api.nextweb.fun/ 和 https://flowus.cn/yifei/share/7c1ff13b-277d-40da-8c04-ebf770ea46ea\n",
-    "- 讯飞星火 API，详见 https://console.xfyun.cn/services/cbm\n",
-    "- 智谱 AI API，详见 https://open.bigmodel.cn/usercenter/apikeys\n",
-    "- 百度 API，详见 https://console.bce.baidu.com/qianfan/ais/console/applicationConsole/application\n",
-    "- 阿里通义千问 API，详见 https://dashscope.console.aliyun.com/apiKey\n",
+    "- OpenAI API, see https://api.nextweb.fun/ and https://flowus.cn/yifei/share/7c1ff13b-277d-40da-8c04-ebf770ea46ea\n",
+    "- Xunfei Spark API（讯飞星火）, see https://console.xfyun.cn/services/cbm\n",
+    "- Zhipu AI API（智谱 AI）, see https://open.bigmodel.cn/usercenter/apikeys\n",
+    "- Baidu API（百度千帆）, see https://console.bce.baidu.com/qianfan/ais/console/applicationConsole/application\n",
+    "- Alibaba Tongyi Qianwen API（阿里通义千问）, see https://dashscope.console.aliyun.com/apiKey\n",
     "\n",
-    "你可以在上述网址中注册账号并申请 API Key，大部分模型对于新用户都有一定的免费额度，少部分可能需要预付费。\n",
+    "You can register an account and apply for an API Key for each of the above URLs. Most models offer a certain amount of free quota for new users, while a few may require prepayment.\n",
     "\n",
-    "为了避免将 API Key 暴露在公开的代码中，我们将 API Key 保存在 `.env` 文件中，然后通过 `dotenv` 包的 `load_dotenv()` 方法读取到环境变量中。\n",
+    "To avoid exposing the API Keys in public code, we will store the API Keys in a `.env` file and then load them into environment variables using the `load_dotenv()` method from the `dotenv` package.\n",
     "\n",
-    "在当前目录下新建一个 `.env` 文件，层级结构如下：\n",
+    "Create a new `.env` file in the current directory with the following structure:\n",
     "\n",
     "```\n",
     ".\n",
@@ -55,7 +55,7 @@
     "└── call-api.ipynb\n",
     "```\n",
     "\n",
-    "`.env` 文件的内容如下：\n",
+    "The content of the `.env` file is as follows:\n",
     "\n",
     "```\n",
     "OPENAI_API_BASE=https://api.nextweb.fun/openai/v1\n",
@@ -84,10 +84,10 @@
     }
    ],
    "source": [
-    "# 通过 `dotenv` 包的 `load_dotenv()` 方法读取到环境变量中\n",
+    "# Loading Environment Variables Using the `dotenv` Package\n",
     "load_dotenv()\n",
     "\n",
-    "# 下面的三个变量较为特殊，我们需要手动设置，否则可能会出现错误\n",
+    "# The following three variables are somewhat special, and we need to set them manually, otherwise errors may occur\n",
     "openai.api_base = os.environ['OPENAI_API_BASE']\n",
     "openai.api_key = os.environ['OPENAI_API_KEY']\n",
     "dashscope.api_key = os.environ['DASHSCOPE_API_KEY']"
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 设置各个模型的对话机器人实例"
+    "## Setting up instances of conversational AI for each model"
    ]
   },
   {
@@ -106,24 +106,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 设置默认提示词\n",
+    "# Set default prompt template\n",
     "prompt = ChatPromptTemplate.from_template(\"{question}\")\n",
     "\n",
-    "# 设置各个模型的对话机器人实例\n",
+    "# Set up instances of chatbots for each model\n",
     "llm_spark = SparkBot()\n",
     "llm_zhipuai = ChatGLM()\n",
     "llm_ernie = ErnieBot()\n",
     "\n",
+    "# Create chat instances for each chatbot model\n",
     "chat_spark = LLMChain(llm=llm_spark, prompt=prompt)\n",
     "chat_zhipuai = LLMChain(llm=llm_zhipuai, prompt=prompt)\n",
-    "chat_ernie = LLMChain(llm=llm_ernie, prompt=prompt)\n"
+    "chat_ernie = LLMChain(llm=llm_ernie, prompt=prompt)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 测试对话效果"
+    "## Test the conversation result"
    ]
   },
   {
@@ -132,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"你是谁？\""
+    "prompt = \"Who are you?\""
    ]
   },
   {
@@ -150,7 +151,7 @@
     {
      "data": {
       "text/plain": [
-       "'我是一个AI助手，没有实体身份。我可以回答一些问题和提供一些建议。'"
+       "'I am a language model AI created by OpenAI, here to assist and answer your questions to the best of my abilities.'"
       ]
      },
      "execution_count": 5,
@@ -169,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 讯飞星火"
+    "### Xunfei Spark"
    ]
   },
   {
@@ -180,7 +181,7 @@
     {
      "data": {
       "text/plain": [
-       "'您好，我是科大讯飞研发的认知智能大模型，我的名字叫讯飞星火认知大模型。我可以和人类进行自然交流，解答问题，高效完成各领域认知智能需求。'"
+       "'Hello, I am iFLYTEK Spark developed by iFLYTEK, and myHello, I am iFLYTEK Spark developed by iFLYTEK, and my name is iFLYTEK Spark. I can communicate with human beings naturally, answer questions, and efficiently complete the needs of cognitive intelligence in various fields.'"
       ]
      },
      "execution_count": 6,
@@ -196,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 智谱 AI"
+    "### Zhipu AI"
    ]
   },
   {
@@ -207,7 +208,7 @@
     {
      "data": {
       "text/plain": [
-       "'我是一个名为 ChatGLM2-12B 的人工智能助手，是基于清华大学 KEG 实验室和智谱 AI 公司于 2023 年共同训练的语言模型开发的。我的任务是针对用户的问题和要求提供适当的答复和支持。'"
+       "\"I am an AI assistant named ChatGLM2-6B, which is developed based on the language model jointly trained by Tsinghua University KEG Lab and Zhipu AI Company in 2023. My job is to provide appropriate answers and support to users' questions and requests.\""
       ]
      },
      "execution_count": 7,
@@ -223,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 百度"
+    "### Baidu"
    ]
   },
   {
@@ -234,7 +235,7 @@
     {
      "data": {
       "text/plain": [
-       "'您好，我是百度研发的知识增强大语言模型，中文名是文心一言，英文名是ERNIE Bot。我能够与人对话互动，回答问题，协助创作，高效便捷地帮助人们获取信息、知识和灵感。\\n\\n如果您有任何问题，请随时告诉我。'"
+       "'我是由百度公司开发的人工智能语言模型，我叫文心一言。我的知识来自于训练数据和算法，不具备个人身份和实体。'"
       ]
      },
      "execution_count": 8,
@@ -250,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 阿里通义千问"
+    "### Alibaba Tongyi Qianwen"
    ]
   },
   {
@@ -261,7 +262,7 @@
     {
      "data": {
       "text/plain": [
-       "'我是来自阿里云的大规模语言模型，我叫通义千问。'"
+       "'I am a large language model created by Alibaba Cloud. I am called QianWen.'"
       ]
      },
      "execution_count": 9,
